--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.4.1",
     "eslint": "^8.56.0",
     "express": "^4.18.2",
     "nodemon": "^3.0.2",
